#3 Add downloads + description to aeri doc.

--- a/datasets/aeri_stacktraces/aeri_stacktraces.html
+++ b/datasets/aeri_stacktraces/aeri_stacktraces.html
@@ -262,19 +262,56 @@ pre[data-line] .line-highlight[data-end]:after {
     </head>
     <body for="html-export">
       <div class="mume markdown-preview   ">
-      <h1 class="mume-header" id="stacktraces-extraction">Stacktraces extraction</h1>
+      <h1 class="mume-header" id="the-aeri-stacktraces-dataset">The AERI Stacktraces dataset</h1>
 
-<p>The database dump contains information about errors encountered by people when using Eclipse. It is composed of several mongodb tables and uses the bson format. Only two tables contain stack traces: <code>problems</code> and <code>incidents</code>.</p>
-<h2 class="mume-header" id="cleaning">Cleaning</h2>
+<h2 class="mume-header" id="presentation">Presentation</h2>
 
-<p>The bson files can be read using the bsondump utility, provided with the mongodb client package (mongodb-clients on Debian).</p>
-<pre data-role="codeBlock" data-info class="language-"><code>bsondump problems.bson --type json &gt; problems.json
-</code></pre><p>After conversion the two files are quite big: 37GB for incidents and 2.1 GB for problems.</p>
-<p>Unfortunately the utility adds some progress information in the UI that needs to be removed from the output:</p>
-<pre data-role="codeBlock" data-info class="language-"><code>grep -v &apos;Progress: &apos; problems.json &gt; problems_clean.json
-</code></pre><p>We also had to remove a few (approx. a dozen of) lines because they embed unparseable source code, characters or asian/binary/utf8/16/256 text. The script tries to JSON-decode all lines one by one, and on failure simply goes to the next line.</p>
-<p>For <code>problems</code> (the file is reasonably small) the script generates for each line a separate JSON file with only information related to that line. The script for problems extraction is <code>parse_json_problems.pl</code>. Output is 820MB and processing time is roughly 45mn.</p>
-<p>For <code>incidents</code> (file is 37GB) the script generates for each line a separate JSON file with only information related to that line. For the records, trying to generate a single file requires at least twice the size of the file in RAM/SWAP (i.e. roughly 74GB). There are 2084328 files in the output for 17GB. The script for incidents extraction is <code>parse_json_incidents.pl</code>. To get an idea of the resources required to process that, the final incidents extraction took roughly 16h on a quite powerful box.</p>
+<p>The <a href="https://wiki.eclipse.org/EPP/Logging">Automated Error Reporting</a> (AERI) system retrieves <a href="https://www.codetrails.com/error-analytics/manual/">information about exceptions</a>. It is installed by default in the <a href="http://www.eclipse.org/ide/">Eclipse IDE</a> and has helped hundreds of projects better support their users and resolve bugs.</p>
+<p>This dataset is a dump of all records over a couple of years, with useful information about the exceptions and environment. It is composed of:</p>
+<ul>
+<li><strong>Incidents</strong> When an exception occurs and is trapped by the AERI system, it constitutes an incident (or error report). An incident can be reported by several different people, can be reported multiple times, and can be linked to different environments.</li>
+<li><strong>Problems</strong> As soon as an error report arrives on the server, it will be analyzed and subsequently assigned to one or more problems. A problem thus represents a set of (similar) error reports which usually have the same root cause &#x2013; for example a bug in your software. (Extract from the <a href="https://www.codetrails.com/error-analytics/manual/concepts/error-reports-problems-bugs-projects.html">AERI system documentation</a>)</li>
+</ul>
+<h2 class="mume-header" id="downloads">Downloads</h2>
+
+<ul>
+<li><strong>Problems full</strong> [ <a href="problems_full.tar.bz2">Download JSON</a> ] -- A list of all problems, exported as JSON (one problem per file).
+<ul>
+<li>Content: 125250 entries, 22 attributes</li>
+<li>Size: 38M compressed, 904M raw</li>
+</ul>
+</li>
+<li><strong>Problems extract</strong> [ <a href="problems_extract.csv.bz2">Download CSV</a> ] -- A list of all problems, exported as CSV (one big file).
+<ul>
+<li>Content: 125250 entries, 22 attributes</li>
+<li>Size: 1.5M compressed, 14M raw</li>
+</ul>
+</li>
+<li><strong>Incidents full</strong> [ <a href="incidents_full.tar.bz2">Download JSON</a> ] -- A list of all incidents, exported as JSON (one incident per file).
+<ul>
+<li>Content: 2084363 entries, 22 attributes</li>
+<li>Size: 820M compressed, 19G raw</li>
+</ul>
+</li>
+<li><strong>Incidents extract</strong> [ <a href="incidents_extract.csv.bz2">Download CSV</a> ] -- A list of all incidents, exported as CSV (one big file).
+<ul>
+<li>Content: 2084045 entries, 20 attributes</li>
+<li>Size: 141M compressed, 778M raw</li>
+</ul>
+</li>
+<li><strong>Incidents Bundles</strong> [ <a href="incidents_bundles_extract.csv.bz2">Download CSV</a> ] -- A list of all bundles found in incidents, exported as CSV. Attributes are bundle_name, bundle_version, and number of occurrences.
+<ul>
+<li>Content: 29709 entries, 3 attributes</li>
+<li>Size: 220K compressed, 1.5M raw</li>
+</ul>
+</li>
+</ul>
+<p><strong>Documentation</strong></p>
+<ul>
+<li><strong>Stacktraces Problems analysis document</strong> [ <a href="problems_analysis.pdf">Download PDF</a> | <a href="problems_analysis.rmd">Download Rmd</a> ] -- A R Markdown document to analyse the Stacktraces problem dataset, with description of the actual content and examples of usage.</li>
+<li><strong>Stacktraces Incidents analysis document</strong> [ <a href="incidents_analysis.pdf">Download PDF</a> | <a href="incidents_analysis.rmd">Download Rmd</a> ] -- A R Markdown document to analyse the Stacktraces incidents dataset, with description of the actual content and examples of usage. This is the PDF export.</li>
+</ul>
+<p>More information about the AERI system can be found on the <a href="https://www.codetrails.com/error-analytics/manual/">Code Trails website</a>.</p>
 <h2 class="mume-header" id="privacy-concerns">Privacy concerns</h2>
 
 <p>The result contains no email address, user id or machine id. Rather than removing the information (we are not sure that we remove all required information) we decided to simply pick relevant information from the file and push it into the output.</p>
@@ -328,6 +365,17 @@ pre[data-line] .line-highlight[data-end]:after {
   }
 ]
 </pre>
+<h2 class="mume-header" id="extraction">Extraction</h2>
+
+<p>The database dump contains information about errors encountered by people when using Eclipse. It is composed of several mongodb tables and uses the bson format. Only two tables contain stack traces: <code>problems</code> and <code>incidents</code>.</p>
+<p>The bson files can be read using the bsondump utility, provided with the mongodb client package (mongodb-clients on Debian).</p>
+<pre data-role="codeBlock" data-info class="language-"><code>bsondump problems.bson --type json &gt; problems.json
+</code></pre><p>After conversion the two files are quite big: 37GB for incidents and 2.1 GB for problems.</p>
+<p>Unfortunately the utility adds some progress information in the UI that needs to be removed from the output:</p>
+<pre data-role="codeBlock" data-info class="language-"><code>grep -v &apos;Progress: &apos; problems.json &gt; problems_clean.json
+</code></pre><p>We also had to remove a few (approx. a dozen of) lines because they embed unparseable source code, characters or asian/binary/utf8/16/256 text. The script tries to JSON-decode all lines one by one, and on failure simply goes to the next line.</p>
+<p>For <code>problems</code> (the file is reasonably small) the script generates for each line a separate JSON file with only information related to that line. The script for problems extraction is <code>parse_json_problems.pl</code>. Output is 820MB and processing time is roughly 45mn.</p>
+<p>For <code>incidents</code> (file is 37GB) the script generates for each line a separate JSON file with only information related to that line. For the records, trying to generate a single file requires at least twice the size of the file in RAM/SWAP (i.e. roughly 74GB). There are 2084328 files in the output for 17GB. The script for incidents extraction is <code>parse_json_incidents.pl</code>. To get an idea of the resources required to process that, the final incidents extraction took roughly 16h on a quite powerful box.</p>
 
       </div>
       
