#3 Update/fix documentation.

--- a/datasets/aeri_stacktraces/aeri_stacktraces.html
+++ b/datasets/aeri_stacktraces/aeri_stacktraces.html
@@ -309,7 +309,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <p><strong>Documentation</strong></p>
 <ul>
 <li><strong>Stacktraces Problems analysis document</strong> [ <a href="problems_analysis.pdf">Download PDF</a> | <a href="problems_analysis.rmd">Download Rmd</a> ] -- A R Markdown document to analyse the Stacktraces problem dataset, with description of the actual content and examples of usage.</li>
-<li><strong>Stacktraces Incidents analysis document</strong> [ <a href="incidents_analysis.pdf">Download PDF</a> | <a href="incidents_analysis.rmd">Download Rmd</a> ] -- A R Markdown document to analyse the Stacktraces incidents dataset, with description of the actual content and examples of usage. This is the PDF export.</li>
+<li><strong>Stacktraces Incidents analysis document</strong> [ <a href="incidents_analysis.pdf">Download PDF</a> | <a href="incidents_analysis.rmd">Download Rmd</a> ] -- A R Markdown document to analyse the Stacktraces incidents dataset, with description of the actual content and examples of usage.</li>
 </ul>
 <p>More information about the AERI system can be found on the <a href="https://www.codetrails.com/error-analytics/manual/">Code Trails website</a>.</p>
 <h2 class="mume-header" id="privacy-concerns">Privacy concerns</h2>
