#5 Update licence in documentation.

--- a/datasets/aeri_stacktraces/aeri_stacktraces.html
+++ b/datasets/aeri_stacktraces/aeri_stacktraces.html
@@ -272,6 +272,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li><strong>Incidents</strong> When an exception occurs and is trapped by the AERI system, it constitutes an incident (or error report). An incident can be reported by several different people, can be reported multiple times, and can be linked to different environments.</li>
 <li><strong>Problems</strong> As soon as an error report arrives on the server, it will be analyzed and subsequently assigned to one or more problems. A problem thus represents a set of (similar) error reports which usually have the same root cause &#x2013; for example a bug in your software. (Extract from the <a href="https://www.codetrails.com/error-analytics/manual/concepts/error-reports-problems-bugs-projects.html">AERI system documentation</a>)</li>
 </ul>
+<p>This dataset is published under the <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons BY-Attribution-Share Alike 4.0 (International) licence</a>.</p>
 <h2 class="mume-header" id="downloads">Downloads</h2>
 
 <ul>
