--- a/datasets/eclipse_mls/eclipse_mls.html
+++ b/datasets/eclipse_mls/eclipse_mls.html
@@ -267,6 +267,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <h2 class="mume-header" id="about-this-datasets">About this datasets</h2>
 
 <p>The <a href="https://eclipse.org">Eclipse Foundation</a> provides individuals and organizations with a commercially focused environment for open source software innovation. It includes git repositories, reviews, issues management, continuous integration, forums and mailing lists among other services. Many well-known and widely used projects are hosted on the forge, including the Eclipse IDE itself, several projects about IoT, modeling, and the new Java working group.</p>
+<p>This dataset is published under the <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons BY-Attribution-Share Alike 4.0 (International) licence</a>.</p>
 <h2 class="mume-header" id="the-csv-extract">The CSV extract</h2>
 
 <p>This dataset is a dump of all posts sent on all mailing lists hosted at the Eclipse Forge. It only includes the list name, post ID, sent date, author name and address, and post subject. the body of messages is dismissed.</p>
